# VulkanLearning

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  ext_and_layers_names.txt  notes  pipelineCreationNotes  vulkan_reference
shaders/: triangle.frag  triangle.vert  triangle.vert.spv
src/: main.cpp
